c/examples/gcc/testsuite/c-c++-common/gomp/declare-target-5.c
// { dg-additional-options "-Wno-deprecated-openmp" }
#pragma omp declare target
void foo (void);	/* { dg-error "'#pragma omp declare target' without corresponding '#pragma omp end declare target'" } */
